app/assets/stylesheets/components/_checklist.scss
// .floating-button{
//   background-color: $trailgreen;
//   border-radius: 50%;



.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1000;
  top: 0;
  right: 0;
  background-color: #568B57;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 5px;

  .fa-solid {
    font-size: 1.8em !important;
    margin-left: 9px;
    text-align:center;
    padding-top: 5px
  }
}

[class^="icon-"], [class*=" icon-"] {
  display: inline-block;
  width: 100%;
}

.sidenav a {
  position: absolute;
  padding: 0px;
  text-decoration: none;
  font-size: 25px;
  color: black;
  display: block;
  transition: 0.3s;

}

// }
// .sidenav {
//   height: 100%;
//   width: 0;
//   position: fixed;
//   z-index: 1000;
//   top: 0;
//   right: 0;
//   background-color: #568B57;
//   overflow-x: hidden;
//   transition: 0.5s;
//   padding-top: 60px;
// }

// .sidenav a {
//   padding: 8px 8px 8px 32px;
//   text-decoration: none;
//   font-size: 25px;
//   color: #818181;
//   display: block;
//   transition: 0.3s;
// }


// .sidenav a:hover {
//   color: #f1f1f1;
// }


.sidenav .closebtn {
  position: absolute;
  font-size: 32px;
  margin-left: 50px;
  position: absolute;
  top: 70px;
  right: 280px;
}

#main {
  transition: margin-right .5s;
  padding: 0px;
  z-index: 1000;
}




/* dashed border */
// background-image: url('https://res.cloudinary.com/ddaoe4tdm/image/upload/v1669443056/borderbottom_t2ynhv.svg');
//   background-size: 80%;
//   background-repeat: no-repeat;
//   background-position: bottom center, 50%, 50%;


.top-border {
  background-image: url('https://res.cloudinary.com/ddaoe4tdm/image/upload/v1669442879/border_1_vi8ecb.svg');
  background-size: 90%;
  background-repeat: no-repeat;
  background-position: top center, 40%, 50%;
}


.checklist-head {
  z-index: 10;
  font-family: 'Jonesy';
  color: #568B57;
  font-style: normal;
  width:100%;
  margin: auto;
  margin-top:0px !important;
  font-weight: 400;
  font-size: 25px;
  line-height: 120%;
  letter-spacing: .06em;
  padding-top: 30px;
  padding-bottom: 10px;
  border-bottom: 0.7px dashed #432f29;
  text-align: center;

}

.checklist-body {
  font-style: normal;
  width:80%;
  margin: auto;
  margin-top:10px !important;
  margin-bottom: 30px;
  font-weight: 400;
  font-size: 13px;
  line-height: 120%;
  letter-spacing: .06em;
  padding: 16px 0;
  text-align: left;
  height:85%;
}


.add-checklist {
  width:100%;
  height:45px;
  border-radius: 10px;
  letter-spacing: .1em;
  background-color: none;
  border: 1px solid $trailgreen !important;
  margin-top: 0px;
  margin-bottom: 20px;
}


.form-check-input:checked {
  background-color: #568B57 !important;
  border-color: #568B57 !important;
}



.form-check-input:focus {
  box-shadow: none !important;
  border: 1px solid rgba(0, 0, 0, 0.25) !important;
}



  .checklist-forms {
    width:90% !important;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 10px;
    align-items: center;
  }

  .checklist-add {
    height:70px !important;
    border-radius: 20px;
    background-color: $trailgreen !important;
  }



  .custom-add-input {
    display: flex;
    width: 100%;
    padding-right: 10px !important;
    height: 50px;
    box-sizing: border-box;
    border-radius: 10px;
    border-color: #568B57;

    .form-control:focus {
      border-color: #568B57 !important;
    }

  }

  .custom-add-input::placeholder {
    opacity: .5;
  }

  .custom-add-button {
    background-color: #568B57 !important;
    font-size: 14px;
    display: flex;
    height: 30px;
    width: 30px;
    bottom: 3px;
    line-height: 1 !important;
    z-index: 4;
    border: none;
    padding: 0px;
  }


  //testing


  /* Button used to open the chat form - fixed at the bottom of the page */
.open-button {
  background-color: $trailgreen;
  color: white;
  // padding: 16px 20px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  bottom: 150px;
  right: 40px;
  width: 50px;
  height: 50px;
  border-radius: 15px;

}

/* The popup chat - hidden by default */
.chat-popup {
  display: none;
  position: fixed;
  width: 300px;
  bottom: 150px;
  right: 40px;
  border: 0px solid #f1f1f1;
  z-index: 9;
  background-color: #568B57;
  border-radius: 5px;
}

/* Add styles to the form container */
.check-container {
  width: 280px;
  max-height: 400px;
  padding: 20px;
  padding-top: 0px;
  margin:auto;
  margin-top:10px;
  background-color: white;
  overflow: scroll;
}

/* Full-width textarea */
.check-container textarea {
  width: 100%;
  padding: 15px;
  margin: 5px 0 22px 0;
  border: none;
  background: #f1f1f1;
  resize: none;
  min-height: 200px;
}

/* When the textarea gets focus, do something */
.check-container textarea:focus {
  background-color: #ddd;
  outline: none;
}

/* Set a style for the submit/send button */
.check-container .btn {
  background-color: #04AA6D;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  width: 100%;
  margin-bottom:10px;
  opacity: 0.8;
}

/* Add a red background color to the cancel button */
.check-container .cancel {
  background-color: red;
}

/* Add some hover effects to buttons */
.check-container .btn:hover, .open-button:hover {
  opacity: 1;
}



.close {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: $trailyellow;
  position: absolute;
  top: 20px;
  left: -15px;
  border: 0px !important;


  .fa-solid {
    color: black;
    font-size: 2em;
  }
}

// .form-check-input:focus {
//   box-shadow: none !important;
//   border: 1px solid rgba(0, 0, 0, 0.25) !important;
// }

